fixed additional alignment issues

--- a/app/css/equine-therapy.module.css
+++ b/app/css/equine-therapy.module.css
@@ -11,9 +11,6 @@
 .titleSlogan {
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background: rgba(191, 200, 172, 0.70);
     padding-top: 24vh;
     padding-bottom: 24vh;
